<resources>
    <string name="app_name">Billwise</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="electric_bill_calculator">Electric Bill Calculator</string>
    <string name="home_usage">Home Usage</string>
    <string name="categories">Categories</string>
    <string name="show_result">Show Result</string>


    <!-- TODO: Remove or change this placeholder text -->

    <string name="Login">login</string>
    <string name="BillWise">billwise</string>
    <string name="EmailAddress">Email-Address</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="electricity_bill_calculator">Electricity Bill Calculator</string>
    <string name="electricity_usage">Electricity Usage</string>
    <string name="water_bill">Water Bill</string>
    <string name="items_electricity_usage">Items Electricity Usage</string>
    <string name="billwise2">BillWise2</string>
    <string name="billwise">BillWise</string>
    <string name="home_electricity_usage">Home Electricity Usage</string>
    <string name="quantity_of_item">Quantity of Item</string>
    <string name="daily_usage_hours">Daily Usage Hours</string>
    <string name="unit_price">Unit price</string>
    <string name="display">Display</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="wattage_of_item_w">Wattage of Item(W)</string>
    <string name="units">Units</string>
    <string name="date_range">Date Range</string>
    <string name="total_amount">Total Amount</string>
    <string name="start_date">Start Date</string>
    <string name="enddate">Enddate</string>
    <string name="unit_p">Unit Price</string>
    <string name="usedunits">UsedUnits</string>
    <string name="calculate">Calculate</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="button">Button</string>
    <string name="elc_catogories">Electric cetogories</string>
    <string name="homeusage">Home Electricity Usage</string>
    <string name="water_cal">Water Bill Calculator</string>
    <string name="back">back</string>


    <string name="inserts">Insert</string>
    <string name="string_additem">Add Item</string>
    <string name="entername">Enter Item Name</string>
    <string name="string_Wattage">Enter Wattage</string>
    <string name="quantity">Enter Quantity</string>
    <string name="Cancel">Cancel</string>
    <string name="string_add">Submit</string>
    <string name="read">Read</string>
    <string name="string_edititem">Edit Item</string>
    <string name="readItem">Read Item</string>
    <string name="name">Item Name : </string>
    <string name="wattage">Item wattage : </string>
    <string name="qty">Quantity : </string>
    <string name="edit">Edit</string>


    <string name="number1">Enter Number 1</string>
    <string name="number2">Enter Number 2</string>
    <string name="label_number1">Number 01</string>
    <string name="label_number_2">Number 02</string>
    <string name="btn_minus">-</string>
    <string name="btn_multiply">x</string>
    <string name="btn_divide">/</string>
    <string name="btn_plus">+</string>
    <string name="text_view">Text View</string>

    <string name="head">Answer</string>
</resources>