<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"

    tools:context=".Login">

    <EditText
        android:id="@+id/edtEmailLog"
        android:layout_width="@dimen/emailwidth"
        android:layout_height="@dimen/email_height"
        android:layout_marginBottom="44dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/irish_grover"
        android:hint="@string/EmailAddress"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/edtPwdLog"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtPwdLog"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height_"
        android:layout_marginBottom="41dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/irish_grover"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="153dp"
        android:layout_height="67dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/Gray"
        android:fontFamily="@font/irish_grover"
        android:text="@string/Login"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:textColor="@color/black" />

    <Button
        android:id="@+id/btn_login2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/Gray"
        android:fontFamily="@font/irish_grover"
        android:onClick="buttonLogin"
        android:text="Register"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColor="@color/black" />

    <TextView
        android:id="@+id/billwise_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="188dp"
        android:fontFamily="@font/irish_grover"
        android:text="@string/BillWise"
        android:textColor="@color/black"
        android:textSize="54sp"
        app:layout_constraintBottom_toTopOf="@+id/edtEmailLog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="BillWise" />
</androidx.constraintlayout.widget.ConstraintLayout>