<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/readrow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReadItems">


    <TextView
        android:id="@+id/addincome2"
        android:layout_width="214dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="#C6C0C0"
        android:backgroundTint="@color/material_dynamic_neutral60"
        android:fontFamily="sans-serif-black"
        android:text="@string/readItem"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#D5C5C5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#FFC107"
                android:orientation="horizontal"
                android:padding="20dp"
                android:paddingStart="20dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="3dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#999999"
                    android:shadowColor="#000000"
                    android:text="@string/name"
                    android:textColor="#000000"
                    android:textSize="19dp" />

                <TextView
                    android:id="@+id/r_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:shadowColor="#000000"
                    android:textColor="#000000"
                    android:textSize="19dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#FFC107"
                android:orientation="horizontal"
                android:padding="20dp"
                android:paddingStart="20dp">

                <TextView
                    android:id="@+id/tfype"
                    android:layout_width="9dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#999999"
                    android:shadowColor="#000000"
                    android:text="@string/wattage"
                    android:textColor="#000000"
                    android:textSize="19dp" />

                <TextView
                    android:id="@+id/r_wattage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:shadowColor="#000000"
                    android:textColor="#000000"
                    android:textSize="19dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#FFC107"
                android:orientation="horizontal"
                android:padding="20dp"
                android:paddingStart="20dp">

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#999999"
                    android:shadowColor="#000000"
                    android:text="@string/qty"
                    android:textColor="#000000"
                    android:textSize="19dp" />

                <TextView
                    android:id="@+id/r_qty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:shadowColor="#000000"
                    android:textColor="#000000"
                    android:textSize="19dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/delete_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/material_dynamic_neutral50"
                    android:text="@string/delete"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/edit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/material_dynamic_neutral50"
                    android:backgroundTint="@color/material_dynamic_neutral50"
                    android:text="@string/edit"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>