<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItem">


    <TextView
        android:id="@+id/item_usage3"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@color/white"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="Add Item"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/iName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/bottom_nav_background"
            android:ems="10"
            android:hint="@string/entername"
            android:inputType="textPersonName"
            android:padding="15dp" />

        <EditText
            android:id="@+id/iWattage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/bottom_nav_background"
            android:ems="10"
            android:hint="@string/string_Wattage"
            android:inputType="textPersonName"
            android:padding="15dp" />

        <EditText
            android:id="@+id/iQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/bottom_nav_background"
            android:ems="10"
            android:hint="@string/quantity"
            android:inputType="number"
            android:padding="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/AddSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                android:backgroundTint="@color/Gray"
                android:text="Add"
                android:textColor="#000000"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>