<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".EditItem">


    <TextView
        android:id="@+id/item_usage2"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@color/white"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="Edit Item"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_usage2">


        <TextView
            android:id="@+id/NameItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/bottom_nav_background"
            android:hint="@string/entername"
            android:padding="15dp"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/wattageItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/bottom_nav_background"
            android:hint="@string/string_Wattage"
            android:padding="15dp"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/QuantityItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/bottom_nav_background"
            android:hint="@string/quantity"
            android:padding="15dp"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/DeleteItem"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/btnRed"
                android:text="Delete"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnEditItem"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"

                android:layout_weight="1"
                android:backgroundTint="@color/btngreen"
                android:text="Update"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>